--- a/index.html
+++ b/index.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>Projeto Rede Social</title>
-    <link rel="stylesheet" href="favicon.ico">
 </head>
 <body>
     
+    <main>
+        <section id="telefone">
+            <iframe src="home.html" name="tela" id="tela" frameborder="0"> 
+                Seu navegador não é compativel com isso.
+            </iframe>
+        </section>
+        <section id="redes-sociais">
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Botão Home"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="Botão logo-youtube"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Botão Facebook"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="Botão Github"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Botão Instagran"></a>
+        </section>
+    </main>
 </body>
 </html>
