--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             </iframe>
         </section>
         <section id="redes-sociais">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Botão Home"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="Botão logo-youtube"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Botão Facebook"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="Botão Github"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Botão Instagran"></a>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Botão Home"></a><br>
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="Botão logo-youtube"></a><br>
+            <a href="facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="Botão Facebook"></a><br>
+            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="Botão Github"></a><br>
+            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Botão Instagran"></a>
         </section>
     </main>
 </body>
